css: modal overflow y temp fix

--- a/orcid-web/src/main/webapp/static/css/orcid.new.css
+++ b/orcid-web/src/main/webapp/static/css/orcid.new.css
@@ -1443,6 +1443,7 @@ ul.privacyHelp li.private {
 }
 
 #cboxContent {
+    overflow-y: scroll;
     position: relative
 }
 
